<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">


    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionNumberPlaceholder"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionPlaceholder"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionNumber" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question">

        <RadioButton
            android:id="@+id/answerA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answerAPlaceholder"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="209dp" />

        <RadioButton
            android:id="@+id/answerB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answerBPlaceholder"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="209dp" />

        <RadioButton
            android:id="@+id/answerC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answerCPlaceholder"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="209dp" />

        <RadioButton
            android:id="@+id/answerD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answerDPlaceholder"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="209dp" />
    </RadioGroup>

    <Button
        android:id="@+id/prevButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/previousButton"
        android:onClick="loadPrevQuestion"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/nextButton"
        android:onClick="loadNextQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/prevButton"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</android.support.constraint.ConstraintLayout>